<resources>
    <string name="app_name">Calculator</string>

    <string name="displayHint">enter an example</string>

    <!--numbers-->
    <string name="zeroText">0</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>

    <!--bonus symbols-->
    <string name="dotText">.</string>
    <string name="openParenthesisText">(</string>
    <string name="closeParenthesisText">)</string>

    <!--main operations-->
    <string name="divideText">÷</string>
    <string name="expressionDivide">/</string>
    <string name="multiplyText">×</string>
    <string name="expressionMultiply">*</string>
    <string name="subtractText">-</string>
    <string name="addText">+</string>
    <string name="equalsText">=</string>

    <!--other operations-->
    <string name="sinText">sin</string>
    <string name="cosText">cos</string>
    <string name="tanText">tan</string>
    <string name="arcSinText">sin<sup><small>-1</small></sup></string>
    <string name="arcCosText">cos<sup><small>-1</small></sup></string>
    <string name="arcTanText">tan<sup><small>-1</small></sup></string>
    <string name="naturalLogText">ln</string>
    <string name="logText">log</string>
    <string name="squareRootText">√</string>
    <string name="absoluteValueText">|x|</string>
    <string name="piText">π</string>
    <string name="eText">e</string>
    <string name="xSquaredText">x<sup><small>2</small></sup></string>
    <string name="xPowerYText">x<sup><small>y</small></sup></string>

    <!--cleaning-->
    <string name="backspaceText">⌫</string>
    <string name="clearText">C</string>
</resources>