<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:ems="10"
        android:textAlignment="textEnd"
        android:inputType="textPersonName"
        android:hint="@string/displayHint"
        android:textColorHint="@color/greyAccent"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--numbers-->
        <Button
            android:id="@+id/zero_btn"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/zeroText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintEnd_toEndOf="@+id/two_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/one_btn"/>
        <Button
            android:id="@+id/one_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/oneText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/four_btn"/>
        <Button
            android:id="@+id/two_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/twoText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/one_btn"
            app:layout_constraintTop_toBottomOf="@+id/five_btn"/>
        <Button
            android:id="@+id/three_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/threeText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/two_btn"
            app:layout_constraintTop_toBottomOf="@+id/six_btn"/>
        <Button
            android:id="@+id/four_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/fourText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seven_btn"/>
        <Button
            android:id="@+id/five_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/fiveText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/four_btn"
            app:layout_constraintTop_toBottomOf="@+id/eight_btn"/>
        <Button
            android:id="@+id/six_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sixText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/five_btn"
            app:layout_constraintTop_toBottomOf="@+id/nine_btn"/>
        <Button
            android:id="@+id/seven_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/sevenText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clear_btn"/>
        <Button
            android:id="@+id/eight_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/eightText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/seven_btn"
            app:layout_constraintTop_toBottomOf="@+id/openParenthesis_btn"/>
        <Button
            android:id="@+id/nine_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/nineText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/eight_btn"
            app:layout_constraintTop_toBottomOf="@+id/closeParenthesis_btn"/>

        <!--bonus symbols-->
        <Button
            android:id="@+id/dot_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_background"
            android:text="@string/dotText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/zero_btn"
            app:layout_constraintTop_toBottomOf="@+id/three_btn"/>
        <Button
            android:id="@+id/openParenthesis_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/openParenthesisText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/clear_btn"
            app:layout_constraintTop_toBottomOf="@+id/backspace_btn"/>
        <Button
            android:id="@+id/closeParenthesis_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_background"
            android:text="@string/closeParenthesisText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/openParenthesis_btn"
            app:layout_constraintTop_toBottomOf="@+id/backspace_btn"/>

        <!--main operations-->
        <Button
            android:id="@+id/divide_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/divideText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/closeParenthesis_btn"
            app:layout_constraintTop_toBottomOf="@+id/backspace_btn"/>
        <Button
            android:id="@+id/multiply_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/multiplyText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/nine_btn"
            app:layout_constraintTop_toBottomOf="@+id/divide_btn"/>
        <Button
            android:id="@+id/subtract_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/subtractText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/six_btn"
            app:layout_constraintTop_toBottomOf="@+id/multiply_btn"/>
        <Button
            android:id="@+id/add_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/arithmetic_button_background"
            android:text="@string/addText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/three_btn"
            app:layout_constraintTop_toBottomOf="@+id/subtract_btn"/>
        <Button
            android:id="@+id/equals_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/equals_button_background"
            android:text="@string/equalsText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintStart_toEndOf="@+id/dot_btn"
            app:layout_constraintTop_toBottomOf="@+id/add_btn"/>

        <!--cleaning-->
        <Button
            android:id="@+id/clear_btn"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/clear_button_background"
            android:text="@string/clearText"
            android:textColor="@color/tanAccent"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backspace_btn" />

        <Button
            android:id="@+id/backspace_btn"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background"
            android:text="@string/backspaceText"
            android:textSize="28sp"
            android:textColor="@color/tanAccent"
            app:layout_constraintEnd_toEndOf="@+id/divide_btn"
            app:layout_constraintStart_toStartOf="@+id/divide_btn"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>